--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -9,7 +9,7 @@
   align-items: center;
 }
 
-.loginForm {
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -87,4 +87,9 @@
 .showPasswordLabel {
   margin-left: 10px;
   cursor: pointer;
+}
+
+.error {
+  color: red;
+  font-size: 14px;
 }
