--- a/src/components/Navbar/NavBar.module.css
+++ b/src/components/Navbar/NavBar.module.css
@@ -1,27 +1,82 @@
-.navbar_container {
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* padding: 10px 20px; */
   background-color: var(--color-orange-dark);
   height: 60px;
 }
 
-.navbar_list {
+.navbarList {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 20px;
+  margin: 0 20px;
+  height: 100%;
+  cursor: pointer;
+}
+
+
+
+.navbarItem {
+  margin: 0 2px;
+  padding: 0 10px;
+  font-weight: bold;
+  font-size: 18px;
   height: 100%;
 }
 
-.navbar_item {
-  color: white;
+.navbarItem:hover {
+  background-color: var(--color-blue);
   cursor: pointer;
-  width: 100%;  
+  transition: background-color 0.2s ease;
 }
 
-.navbar_item_link {
-  color: var(--color-beige);
+.navbarItemText {
+  color: white;
   text-decoration: none;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.caretDown {
+  margin-left: 5px;
+  color: white;
+}
+
+.dropdownMenu {
+  position: absolute;
+  top: 100%;
+  left: -10px;
+  min-width: 200%;
+  display: none;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.navbarItem:hover .dropdownMenu{
+  display: flex;
+}
+
+
+.dropdownItem {
+  list-style: none;
+  background-color: var(--color-orange-dark);
+  width: 100%;
+  display: flex;
+}
+
+
+.dropdownItemText {
+  text-decoration: none;
+  color: white;
+  width: 100%;
+  padding: 8px 12px;
+}
+
+.dropdownItemText:hover {
+  background-color: var(--color-blue);
+  
 }
