--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
 :root {
-    --color-orange-dark: #FF7601;
-    --color-orange-light: #F3A26D;
-    --color-beige: #FCECDD;
-    --color-blue: #00809D;
+    --color-orange-dark: #ff7601;
+    --color-orange-light: #f3a26d;
+    --color-beige: #fcecdd;
+    --color-blue: #00809d;
 }
-
-
-
