--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,6 +1,11 @@
-
+.sidebar {
+    position: fixed;
+    width: 250px;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
 
 .content {
-    position: fixed;
-    top: 0;
+    margin-left: 250px;
 }
