--- a/src/components/GetStarted/GetStarted.module.css
+++ b/src/components/GetStarted/GetStarted.module.css
@@ -1,10 +1,11 @@
 .background {
-    background-color: var(--color-blue);
-    height: 100vh;
+    background-color: lightskyblue;
+    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 60px;
 }
 
 .title {
@@ -15,7 +16,7 @@
 
 .button {
     background-color: white;
-    color: var(--color-blue);
+    color: lightskyblue;
     border: none;
     padding: 10px 20px;
     font-size: 1.2rem;
