--- a/src/components/Navbar/NavBar.module.css
+++ b/src/components/Navbar/NavBar.module.css
@@ -1,80 +1,145 @@
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--color-orange-dark);
-  height: 60px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color-orange-dark);
+    height: 60px;
+    border-bottom: 2px solid black;
 }
 
 .navbarList {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin: 0 20px;
-  height: 100%;
-  cursor: pointer;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin: 0 20px;
+    height: 100%;
+    cursor: pointer;
 }
 
 .navbarItem {
-  margin: 0 2px;
-  padding: 0 10px;
-  font-weight: bold;
-  font-size: 18px;
-  height: 100%;
+    padding: 0 10px;
+    font-weight: bold;
+    font-size: 18px;
+    height: 100%;
 }
 
 .navbarItem:hover {
-  background-color: var(--color-blue);
-  cursor: pointer;
-  transition: background-color 0.2s ease;
+    background-color: var(--color-blue);
+    cursor: pointer;
+    transition: background-color 0.2s ease;
 }
 
 .navbarItemText {
-  color: white;
-  text-decoration: none;
-  height: 100%;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  position: relative;
+    color: white;
+    text-decoration: none;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 
-.caretDown {
-  margin-left: 5px;
-  color: white;
+.caret {
+    margin-left: 5px;
+    color: white;
 }
 
 .dropdownMenu {
-  position: absolute;
-  top: 100%;
-  left: -10px;
-  min-width: 200%;
-  display: none;
-  flex-direction: column;
-  align-items: stretch;
+    position: absolute;
+    top: 100%;
+    left: -12px;
+    min-width: 200%;
+    display: none;
+    flex-direction: column;
+    align-items: stretch;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
-.navbarItem:hover .dropdownMenu{
-  display: flex;
+.navbarItem:hover .dropdownMenu {
+    display: flex;
 }
-
 
 .dropdownItem {
-  list-style: none;
-  background-color: var(--color-orange-dark);
-  width: 100%;
-  display: flex;
+    list-style: none;
+    background-color: var(--color-orange-dark);
+    width: 100%;
+    display: flex;
 }
 
-
 .dropdownItemText {
-  text-decoration: none;
-  color: white;
-  width: 100%;
-  padding: 8px 12px;
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    padding: 8px 12px;
 }
 
 .dropdownItemText:hover {
-  background-color: var(--color-blue);
-  
+    background-color: var(--color-blue);
+}
+
+.userMenu {
+    position: relative;
+    height: 100%;
+    margin-right: 80px;
+    display: flex;
+    align-items: center;
+}
+
+.avatar {
+    background-image: url('../../assets/panda.jpg');
+    background-size: 80px;
+    background-position: center;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+}
+
+.userInfo {
+    position: absolute;
+    top: 100%;
+    right: -80px;
+    background-color: #f9f9f9;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    cursor: context-menu;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+.userNavbar {
+    display: flex;
+    align-items: center;
+    color: white;
+    cursor: pointer;
+}
+
+.userInfoItems {
+    padding: 10px;
+}
+
+.signout {
+    display: flex;
+    background-color: var(--color-orange-dark);
+    color: white;
+    gap: 10px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.signout:hover {
+    background-color: var(--color-blue);
+}
+
+.separateMenu {
+    height: 40%;
+    /* border-right: 1px solid white; */
 }
