--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,8 +1,5 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
+    width: 100%;
     height: 100%;
     background-color: var(--color-orange-dark);
     display: flex;
@@ -18,10 +15,27 @@
     margin: 5px 0 5px 5px;
 }
 
+.footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.link {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    width: 100%;
+    background-color: var(--color-orange-light);
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+}
+
 .userInfo {
     display: flex;
     flex-direction: column;
-    margin-left: 5px ;
+    margin-left: 5px;
 }
 
 .username {
