--- a/src/components/TodoContent/TodoContent.module.css
+++ b/src/components/TodoContent/TodoContent.module.css
@@ -1,9 +1,3 @@
-.wrapper {
-    position: fixed;
-    top: 0;
-    right: 0;
-}
-
 .header {
     width: 100%;
     display: flex;
@@ -28,13 +22,10 @@
     transition: background-color 0.3s ease;
 }
 
-
 .headerButton:hover {
     background-color: var(--color-orange-dark);
     color: white;
 }
-
-
 
 .title {
     font-size: 24px;
@@ -43,7 +34,7 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(186px, 1fr));
     gap: 20px;
     padding: 20px;
 }
@@ -55,17 +46,59 @@
     padding: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
-    width: 200px;
+    width: 240px;
+    position: relative;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
 }
 
 .task:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.task:hover .cover {
+    display: flex;
+}
+
 .taskTitle {
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
+}
+
+.separate {
+    width: 100%;
+    border-bottom: black solid 2px;
+}
+
+.taskDescriptionLabel {
+    margin-top: 8px;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.taskDescription {
+    min-width: 0;
+    overflow-wrap: break-word;
+    word-break: break-word; /* Optional, for extra control */
+    margin: 10px 0;
+}
+
+.taskDate {
+    margin: 5px 0;
+}
+
+.taskStatus {
+    width: 150px;
+    margin-top: 5px;
+    border-radius: 10px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    color: white;
 }
 
 .completed {
@@ -73,7 +106,7 @@
 }
 
 .pending {
-    border: 2px solid orange;
+    border: 2px solid red;
 }
 
 .inProgress {
@@ -81,13 +114,44 @@
 }
 
 .completed .taskStatus {
-    color: green;
+    background-color: green;
 }
 
 .pending .taskStatus {
-    color: orange;
+    background-color: red;
 }
 
 .inProgress .taskStatus {
-    color: blue;
+    background-color: blue;
+}
+
+.cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.button {
+    display: flex;
+    background-color: var(--color-orange-light);
+    color: white;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+}
+
+.button:hover {
+    transform: scale(1.5);
 }
